css/StyleSheet1.css
@import url('https://fonts.googleapis.com/css?family=Cabin|Raleway:300,400,700,900');
body
{
    font-family: 'Raleway', sans-serif;
}
h1{
font-family: 'Cabin', sans-serif;
font-weight: 300;
}
h2{
font-family: 'Cabin', sans-serif;
font-weight: 400;
}
h3{
font-family: 'Cabin', sans-serif;
font-weight: 400;
}
figure{
	font-family: 'Raleway', sans-serif;
	font-variant: italic;
	font-size: .8rem
}
button{
	font-family: Cabin;
	font-weight: 900;
	background-color: #ffffff;
	border:1px #666 solid;
	/*min-height: 44px;*/
}
.friend{
	text-align:center;
}
.app-panel{max-width:400px;}
.center{
	width:100%;
	text-align:center;
	justify-content: center;
}
.center h1{width:100%;}
.right{float: right;}
.connectButton{
	position:fixed;
	bottom:40px;
}
.map{
	overflow-x: scroll;
	overflow-y: scroll;
}
#timer{
	width:82%;
	text-align:right;

}
#map img{position:relative;}
#f0{top:-380px;left:160px;}
#f1{top:-600px;left:40px;}
#f2{top:-700px;left:90px;}
#f3{top:-200px;left:120px;}
#f4{top:-450px;left:200px;}
#f5{top:-620px;left:259px;}
#f6{top:-330px;left:300px;}
#f7{top:-275px;left:95px;}
#f8{top:-800px;left:47px;}
#f9{top:-523px;left:90px;}
#f10{top:-222px;left:22px;}
#f11{top:-586px;left:123px;}
#f12{top:-432px;left:200px;}
#meeting{top:-390px; left:210px;}
#newMeeting{
	width: 411px;
	height:0px;
	transition: height 1s ease-in-out;
	position:fixed;
	bottom:0px;
	left:0;
	background-color: #ffffff;
}

